# cipher-sec

./: Containerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
assets/: index.html
docs/: _config.yml  architecture-tradeoff.md  architecture.md  index.html  index.md  system-design.md
docs/blocks/: 01-scope-authorization.md  02-recon-layer.md  03-sandboxed-exploit-runner.md  04-policy-deny-engine.md  05-hitl-on-destructive.md  06-supply-chain-defense.md  07-lastraj-redteam-corpus.md  08-safety-monitor.md  09-audit-log.md  10-evidence-reporting.md
src/cipher_sec/: __init__.py  app.py  audit.py  deny_engine.py  engagements.py  models.py  recon.py  runner.py  safety_monitor.py  scope.py
tests/: test_app.py  test_audit.py  test_deny_engine.py  test_engagements.py  test_recon.py  test_runner.py  test_scope.py
